# windhover

./: .gitignore  GUIDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: GUIDE.md
tests/: test_smoke.py
windhover/: __init__.py  artifacts.py  config.py  demo_flock.py  demo_graph.py  demo_rag.py  extract.py  pricing.json  push.py  report.py  server.py  store.py  tracer.py
windhover/static/: index.html  manifest.json  sw.js
